force-app/main/default/objects/ChargeMaster__c/ChargeMaster__c.object-meta.xml
<CustomObject>
    <label>料金マスタ</label>
    <nameField>
        <label>項目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>