force-app/main/default/objects/ChargeMaster__c/fields/Belongs__c.field-meta.xml
<CustomField>
    <fullName>Belongs__c</fullName>
    <label>所属</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BelongsSelection</valueSetName>
    </valueSet>
</CustomField>