force-app/main/default/objects/ChargeMaster__c/fields/ChargeCategory__c.field-meta.xml
<CustomField>
    <fullName>ChargeCategory__c</fullName>
    <label>料金区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>固定</fullName>
            </value>
            <value>
                <fullName>変動</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>