force-app/main/default/objects/ChargeMaster__c/fields/CustodyDivision__c.field-meta.xml
<CustomField>
    <fullName>CustodyDivision__c</fullName>
    <label>預かり区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>朝の預かり保育</fullName>
            </value>
            <value>
                <fullName>預かり保育</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>