force-app/main/default/objects/ChargeMaster__c/fields/CustodyEnd__c.field-meta.xml
<CustomField>
    <fullName>CustodyEnd__c</fullName>
    <label>預かり終了</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7:29</fullName>
            </value>
            <value>
                <fullName>7:59</fullName>
            </value>
            <value>
                <fullName>8:29</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>17:30</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>18:30</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>