force-app/main/default/objects/ChargeMaster__c/fields/CustodyStart__c.field-meta.xml
<CustomField>
    <fullName>CustodyStart__c</fullName>
    <label>預かり開始</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7:00</fullName>
            </value>
            <value>
                <fullName>7:30</fullName>
            </value>
            <value>
                <fullName>8:30</fullName>
            </value>
            <value>
                <fullName>17:01</fullName>
            </value>
            <value>
                <fullName>17:31</fullName>
            </value>
            <value>
                <fullName>18:01</fullName>
            </value>
            <value>
                <fullName>18:31</fullName>
            </value>
            <value>
                <fullName>保育終了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>