force-app/main/default/objects/ChargeMaster__c/fields/CustodyType__c.field-meta.xml
<CustomField>
    <fullName>CustodyType__c</fullName>
    <label>預かり種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustodyType</valueSetName>
    </valueSet>
</CustomField>