force-app/main/default/objects/ChargeMaster__c/fields/DailyCharge__c.field-meta.xml
<CustomField>
    <fullName>DailyCharge__c</fullName>
    <label>日割料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>