force-app/main/default/objects/ChargeMaster__c/fields/MonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCharge__c</fullName>
    <label>月極料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>