force-app/main/default/objects/ChargeMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MonthlyCharge__c</columns>
    <columns>DailyCharge__c</columns>
    <columns>ChargeCategory__c</columns>
    <columns>School__c</columns>
    <columns>Belongs__c</columns>
    <columns>AnotherAffiliation__c</columns>
    <columns>CustodyDivision__c</columns>
    <columns>CustodyType__c</columns>
    <columns>CustodyStart__c</columns>
    <columns>CustodyEnd__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>